@@ -21,9 +21,22 @@ jar {
     }
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 dependencies {
     implementation 'org.apache.commons:commons-lang3:3.12.0'
     implementation 'commons-io:commons-io:2.8.0'
+    implementation 'org.apache.commons:commons-collections4:4.4'
     implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
